feat: getCurrentPeriod returns summary
