# docs/api/openapi.yml
@@ -96,7 +96,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Period'
+                $ref: '#/components/schemas/PeriodSummary'
         default:
           description: Error response
           content:
@@ -116,7 +116,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Period'
+                $ref: '#/components/schemas/PeriodSummary'
         default:
           description: Error response
           content:
@@ -143,7 +143,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Period'
+                $ref: '#/components/schemas/PeriodSummary'
         '404':
           description: Period not found
         default:
@@ -176,7 +176,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Period'
+                $ref: '#/components/schemas/PeriodSummary'
         '404':
           description: Period not found
         default:
@@ -546,7 +546,7 @@ components:
         - startDate
         - endDate
 
-    Period:
+    PeriodSummary:
       type: object
       properties:
         id:
